# mitic-data-science-team-1-septiembre-2024

./: .gitignore  README.md  intento.ipynb  py_CienciadeDatos_manejo_de_cadenas.ipynb  pyproject.toml
automatizaciones/: asistencias.ipynb
clases/DS fundamentals/: pyproject.toml
clases/DS fundamentals/Clase_1/: consumo_json.ipynb  ejercicios.ipynb
clases/DS fundamentals/Clase_1/notebooks/: consumo_json.ipynb  ejercicios.ipynb
clases/DS fundamentals/clase 2/: pandas.ipynb
clases/DS fundamentals/clase_2/: pandas.ipynb
clases/DS fundamentals/semana_1/: ejercicios.ipynb
clases/DS fundamentals/semana_2/: pandas_vs_numpy.ipynb
clases/clase prebootcamp/: clase_prebootcamp_ds.ipynb
clases/ds-fundamentals/data/: ejemplo.json  gdp-vs-happiness.csv
clases/ds-fundamentals/ejercicios de integración/: ejercicio_AnniaBenitez.ipynb  ejercicio_integracion_1.ipynb  ejercicio_integracion_1_solucion.ipynb  ejercicio_integracion_2.ipynb  ejercicio_integracion_2_datos_limpios.json
clases/ds-fundamentals/ejercicios-integración/: ejercicio_integracion_1_2.ipynb
clases/ds-fundamentals/pruebas-resueltas/: ds_salaries.ipynb  hotel_booking.html  hotel_booking.ipynb  telco_customer_churn.ipynb  videojuegos.ipynb  videojuegos_2024.ipynb
clases/ds-fundamentals/semana-2/: json_api_key.ipynb  pandas.ipynb  utils.py
clases/ds-fundamentals/semana-3/: visualizaciones.ipynb
clases/ds-fundamentals/semana-4/: visualizaciones_avanzadas.ipynb
data/: Sin título.rtf  articulos para leer.rtf  competencia_kaggle.json  ventas_tienda_simulada.csv
notebooks/: clase_prebootcamp_ds.ipynb
(+57 files in other folders)
